--- a/public/css/CP_Calc.css
+++ b/public/css/CP_Calc.css
@@ -42,7 +42,7 @@
   font-weight: 900;
   margin: 60px auto;
 } .u-section-3 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("images/entenda-como-funciona-uma-corretora-de-investiment.jpeg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("https://www.hypeds.com/images/entenda-como-funciona-uma-corretora-de-investiment.jpeg");
   background-position: 50% 50%;
 }
 
@@ -145,7 +145,7 @@
     margin-left: auto;
   }
 } .u-section-4 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("images/conheca-as-principais-linhas-de-financiamento-imobiliario.webp");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("https://www.hypeds.com/images/conheca-as-principais-linhas-de-financiamento-imobiliario.webp");
   background-position: 50% 75.62%;
 }
 
@@ -249,7 +249,7 @@
     margin-right: 10px;
   }
 } .u-section-5 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("images/Financiamento-de-veculos.jpg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("https://www.hypeds.com/images/Financiamento-de-veculos.jpg");
   background-position: 50% 63.06%;
 }
 
