--- a/public/views/about.ejs
+++ b/public/views/about.ejs
@@ -1,23 +1,18 @@
 <body class="u-body u-xl-mode" data-lang="en">
-    <link rel="stylesheet" href="https://www.hypeds.com/css/CP_Index.css" media="screen">
-    <script class="u-script" type="text/javascript" src="https://www.hypeds.com/js/jquery.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="https://www.hypeds.com/js/HypedLib.js" defer=""></script>
-    <section class="u-align-center u-clearfix u-grey-80 u-section-1" id="sec-542e">
+    <link rel="stylesheet" href="https://www.hypeds.com/css/CP_Calc_2.css" media="screen">
+    <section class="u-align-center u-clearfix u-grey-80 u-section-1" id="sec-6d29">
       <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
         <h1 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-1">
           <a href="https://HYPED-or-Credipublio.diogonunes2.repl.co/" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1">Inicio&nbsp;</a> &nbsp; <a href="https://HYPED-or-Credipublio.diogonunes2.repl.co/calcule" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2">Calcule</a>&nbsp; &nbsp; <a href="https://HYPED-or-Credipublio.diogonunes2.repl.co/about" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-3">Quem Somos</a>
         </h1>
       </div>
     </section>
-    <section class="u-align-center u-clearfix u-image u-shading u-section-2" src="" data-image-width="1140" data-image-height="760" id="sec-8c4a">
-      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
-        <h1 class="u-custom-font u-font-oswald u-text u-text-default u-title u-text-1">CrediPublio</h1>
-        <p class="u-large-text u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-variant u-text-2">Onde tempo e dinheiro são poupados</p>
-        <a href="https://HYPED-or-Credipublio.diogonunes2.repl.co/calcule" class="u-btn u-btn-round u-button-style u-custom-color-1 u-radius-20 u-btn-1" data-animation-name="customAnimationIn" data-animation-duration="1000" data-animation-direction="">Conheça nossos serviços</a>
+    <section class="u-align-center u-clearfix u-grey-25 u-section-2" id="sec-62ae">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <h1 class="u-text u-text-default u-text-1">Sobre nós</h1>
+        <p class="u-text u-text-2"><%= about %></p>
       </div>
     </section>
-    
-    
     <footer class="u-align-center u-clearfix u-footer u-grey-90 u-footer" id="sec-04f4"><div class="u-align-left u-clearfix u-sheet u-sheet-1">
         <p class="u-align-center u-text u-text-1">Links Úteis<br>
           <a href="https://stats.uptimerobot.com/1BnoXi6Mgp" class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1">Status Page<br>
