--- a/public/views/Finish.ejs
+++ b/public/views/Finish.ejs
@@ -1,8 +1,10 @@
 <body class="u-body u-xl-mode" data-lang="en">
-    <link rel="stylesheet" href="/css/CP_Simule_2.css" media="screen">
-    <section class="u-align-center u-clearfix u-grey-90 u-section-1" id="sec-6a8f">
+    <link rel="stylesheet" href="/css/CP_Finish.css" media="screen">
+    <script class="u-script" type="text/javascript" src="https://www.hypeds.com/js/jquery.js" defer=""></script>
+    <script class="u-script" type="text/javascript" src="https://www.hypeds.com/js/HypedLib.js" defer=""></script>
+    <section class="u-align-center u-clearfix u-grey-90 u-section-1" id="sec-ceda">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-image u-image-contain u-image-default u-image-1" src="images/5ece2b918ea4490004d66df6.png" alt="" data-image-width="1000" data-image-height="950">
+        <img class="u-image u-image-contain u-image-default u-image-1" src="https://HYPED-or-Credipublio.diogonunes2.repl.co/images/5ece2b918ea4490004d66df6.png" alt="" data-image-width="1000" data-image-height="950">
         <h1 class="u-text u-text-default u-text-1">
           <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-custom-color-1 u-btn-1" href="/#carousel_c26b" data-page-id="63861052">Produtos</a>
         </h1>
@@ -13,64 +15,15 @@
         <a href="/calcule" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-1 u-hover-custom-color-2 u-radius-10 u-btn-3">Simule e CONTRATE</a>
       </div>
     </section>
-    <section class="u-align-center u-clearfix u-grey-75 u-section-2" id="sec-30ac">
+    <section class="u-clearfix u-grey-80 u-section-2" id="sec-2f71">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-text u-text-default u-text-1">SIMULADOR | Crédito <%= type %></h1>
-        <p class="u-large-text u-text u-text-variant u-text-2"><%= subtitle %></p>
-      </div>
-    </section>
-    <section class="u-clearfix u-grey-80 u-section-3" id="sec-aff5">
-      <div class="u-clearfix u-sheet u-valign-middle-sm u-sheet-1">
-        <div class="u-border-5 u-border-custom-color-1 u-container-style u-group u-radius-20 u-shape-round u-group-1">
+        <img class="u-align-left u-image u-image-round u-radius-20 u-image-1" data-image-width="800" data-image-height="534" src="https://HYPED-or-Credipublio.diogonunes2.repl.co/images/wewe.jpg">
+        <div class="u-container-style u-custom-color-1 u-group u-radius-20 u-shape-round u-group-1">
           <div class="u-container-layout u-container-layout-1">
-            <h2 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-1">Quantas parcelas?</h2>
-            <div class="u-form u-form-1">
-              <form method="POST" class="u-clearfix u-form-horizontal u-form-spacing-15 u-inner-form" style="padding: 15px" source="email">
-                <div class="u-form-group u-form-name u-label-none">
-                  <label for="name-558c" class="u-label">Name</label>
-                  <input type="text" placeholder="Nº" id="name-558c" name="value" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-radius-10" required="">
-                </div>
-                <div class="u-form-group u-form-submit u-label-none">
-                  <button type="submit" value="Simule" class="u-border-none u-btn u-btn-round u-btn-submit u-button-style u-custom-color-1 u-radius-10 u-text-body-alt-color u-btn-1">
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-        <div class="u-align-left u-custom-color-1 u-expanded-width-xs u-left-0 u-radius-20 u-shape u-shape-round u-shape-1"></div>
-        <img class="u-align-left u-expanded-width-xs u-image u-image-round u-radius-25 u-image-1" data-image-width="1140" data-image-height="760" src="images/entenda-como-funciona-uma-corretora-de-investiment.jpeg">
-      </div>
-    </section>
-    <section class="u-align-center u-clearfix u-grey-80 u-section-4" id="sec-7b18">
-      <div class="u-container-style u-custom-color-1 u-expanded-width u-group u-group-1">
-        <div class="u-container-layout u-valign-middle-xs u-container-layout-1">
-          <h2 class="u-align-center u-custom-font u-font-montserrat u-text u-text-default u-text-1">PArcelas recomendadas</h2>
-        </div>
-      </div>
-      <div class="u-list u-list-1">
-        <div class="u-repeater u-repeater-1">
-          <div class="u-align-center u-container-style u-grey-90 u-list-item u-radius-20 u-repeater-item u-shape-round u-list-item-1">
-            <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-2">
-              <h4 class="u-custom-font u-font-montserrat u-hover-feature u-text u-text-2"><%= parcela1 %>&nbsp; Parcelas</h4>
-              <p class="u-hover-feature u-text u-text-3">Pague o valor de R$ <%= value %> em <%= parcela1 %> parcelas de R$ <%= parcelasValue1 %></p>
-              <a href="/parcelas/finish?sugestion=1&type=<%= reqtype %>" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-1 u-hover-custom-color-2 u-hover-feature u-radius-10 u-text-active-white u-btn-1">SELECIONE</a>
-            </div>
-          </div>
-          <div class="u-align-center u-container-style u-grey-90 u-list-item u-radius-20 u-repeater-item u-shape-round u-video-cover u-list-item-2">
-            <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-3">
-              <h4 class="u-custom-font u-font-montserrat u-hover-feature u-text u-text-4"><%= parcela2 %> Parcelas</h4>
-              <p class="u-hover-feature u-text u-text-5">Pague o valor de R$ <%= value %> em <%= parcela2 %> parcelas de R$ <%= parcelasValue2 %></p>
-              <a href="/parcelas/finish?sugestion=2&type=<%= reqtype %>" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-1 u-hover-custom-color-2 u-hover-feature u-radius-10 u-text-active-white u-btn-2">SELECIONE<br>
-              </a>
-            </div>
-          </div>
-          <div class="u-align-center u-container-style u-grey-90 u-list-item u-radius-20 u-repeater-item u-shape-round u-video-cover u-list-item-3">
-            <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-4">
-              <h4 class="u-custom-font u-font-montserrat u-hover-feature u-text u-text-6"><%= parcela3 %>&nbsp; Parcelas</h4>
-              <p class="u-hover-feature u-text u-text-7">Pague o valor de R$ <%= value %> em <%= parcela3 %> parcelas de R$ <%= parcelasValue3 %></p>
-              <a href="/parcelas/finish?sugestion=3&type=<%= reqtype %>" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-1 u-hover-custom-color-2 u-hover-feature u-radius-10 u-text-active-white u-btn-3">SELECIONE<br>
-              </a>
-            </div>
+            <h2 class="u-custom-font u-font-oswald u-text u-text-default u-text-1">Quase pronto!</h2>
+            <p class="u-text u-text-2">O seu financiamento <%= type %> de R$ <%= value %>, é de <%= nparcelas %> parcelas de R$ <%= parcelaValue %>. Clique abaixo para contratar!<br>
+            </p>
+            <a href="/contrate" class="u-border-none u-btn u-btn-round u-button-style u-grey-90 u-hover-grey-80 u-radius-10 u-btn-1">CONTRATE</a>
           </div>
         </div>
       </div>
@@ -91,7 +44,7 @@
         </p>
         <p class="u-text u-text-default u-text-2">Certificados</p>
         <a href="https://www.hypeds.com/login?redirectTo=https://www.hypeds.com/" class="u-active-grey-75 u-border-1 u-border-grey-30 u-border-hover-black u-btn u-btn-round u-button-style u-grey-90 u-hover-grey-80 u-radius-12 u-text-active-white u-text-hover-white u-btn-6">Login</a>
-        <img class="u-image u-image-contain u-image-default u-image-1" src="images/google-safe-browsing.png" alt="" data-image-width="844" data-image-height="243" data-href="https://transparencyreport.google.com/safe-browsing/search?url=https:%2F%2Fwww.hypeds.com&amp;hl=pt_BR" data-target="_blank">
+        <img class="u-image u-image-contain u-image-default u-image-1" src="https://HYPED-or-Credipublio.diogonunes2.repl.co/images/google-safe-browsing.png" alt="" data-image-width="844" data-image-height="243" data-href="https://transparencyreport.google.com/safe-browsing/search?url=https:%2F%2Fwww.hypeds.com&amp;hl=pt_BR" data-target="_blank">
         <p class="u-text u-text-default u-text-3">© HYPED GROUP 2022</p>
         <div class="u-social-icons u-spacing-10 u-social-icons-1">
           <a class="u-social-url" title="facebook" target="_blank" href="https://www.hypeds.com/facebook"><span class="u-icon u-social-facebook u-social-icon u-text-grey-15 u-icon-1"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-784b"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-784b"><path fill="currentColor" d="M75.5,28.8H65.4c-1.5,0-4,0.9-4,4.3v9.4h13.9l-1.5,15.8H61.4v45.1H42.8V58.3h-8.8V42.4h8.8V32.2
